Fix(style): button contrast errors for WAVE

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,6 +54,10 @@ footer {
     font-size: 0 !important;
 }
 
+.sidenav-trigger, .btn-floating {
+    font-size: 0 !important;
+}
+
 .ext-links {
     margin-right: 5%;
 }
